--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,8 +14,4 @@ jobs:
         with:
           stable: 'false'
           go-version: '1.17.13'
-      - name: Lint
-        run:  |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
-
-          golangci-lint run
+      - run: go version
